--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     .gallery-img {
         width: 100%;
-        height: 700px;
+        height: 1000px;
         object-fit: cover;
     }
 
@@ -112,7 +112,7 @@
         height: 100%;
 
         /* Center and scale the image nicely */
-        background-position: center;
+        background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
     }
