--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     .bgimg2 {
-        background-image: url("5.JPG")
+        background-image: url("5.jpg")
     }
 
     /* Fading animation */
