gallery-imagee jpg

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
         imgNum = random
 
-        const src = "./img/" + imgNum + ".JPG"
+        const src = "./img/" + imgNum + ".jpg"
 
         document.getElementById("gallery-img").innerHTML = '<img class="w3-round gallery-img fade" src=' + src + '>'
     }
