--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="shortcut icon" href="https://bohdan-khrystyna.space/favicon.ico" type="image/x-icon">
-<link rel="icon" href="https://bohdan-khrystyna.space/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
     body, h1, h2 {
         font-family: "Raleway", sans-serif
@@ -139,7 +139,7 @@
 <header class="bg-text w3-display-container w3-wide">
     <h2 class="title">Іван & Юстина</h2>
     <h1 class="w3-large">Ми одружуємося</h1>
-    <p>19 листопада 20212</p>
+    <p>19 листопада 2022</p>
 </header>
 
 <!-- Navbar (sticky bottom) -->
@@ -195,7 +195,7 @@
                 <p style="text-align: left;"><i>
                     🤩 Ми хочемо, щоб наше свято було сімейним та атмосферним.<br/>
                     Будемо щасливі, якщо ви розділите з нами свято нашої сім’ї.<br/><br/>
-                    Трохи пізніше ми пришлемо детальну програму пікніку та церемонії.<br/>
+                    Трохи пізніше ми пришлемо детальну програму весільної церемонії.<br/>
                     Для цього потрібно лише підтвердити свою присутність 😇<br/>
                 </i></p>
             </div>
