--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
     function sendAnswer(data) {
         const http = new XMLHttpRequest()
-        const url = "https://bohdan-khrystyna.space/post_tg.php"
+        const url = "https://dzubak.com.ua/post_wedding_torchilo.php"
 
         const additional = [
             document.getElementById('cannot-be-picknick').checked ? 'Не може бути на пікніку' : '',
