--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
 
-    @media only screen and (max-width: 1000px)  {
+    @media only screen and (max-width: 1000px) {
         .gallery-img {
             height: 600px;
         }
@@ -48,13 +48,13 @@
         }
     }
 
-    @media only screen and (max-width: 770px)  {
+    @media only screen and (max-width: 770px) {
         .gallery-img {
             height: 500px;
         }
     }
 
-    @media only screen and (max-width: 637px)  {
+    @media only screen and (max-width: 637px) {
         .gallery-img {
             height: 380px;
         }
@@ -64,7 +64,7 @@
         }
     }
 
-    @media only screen and (max-width: 500px)  {
+    @media only screen and (max-width: 500px) {
         .gallery-img {
             height: 380px;
         }
@@ -107,7 +107,6 @@
         background-image: url("1.JPG");
 
 
-
         /* Full height */
         height: 100%;
 
@@ -119,8 +118,8 @@
 
     /* Position text in the middle of the page/image */
     .bg-text {
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
         color: white;
         font-weight: bold;
         border: 3px solid #f1f1f1;
@@ -161,7 +160,7 @@
             <i>
                 Незабаром відбудеться це неповторне та незабутнє свято - наше весілля.<br/>
                 Ми віримо, що цей день стане благословенним початком довгого та щасливого життя.<br/>
-                Тому, ми  хочемо розпочати наше подружнє життя поруч із самими близькими та найріднішими людьми.<br/>
+                Тому, ми хочемо розпочати наше подружнє життя поруч із самими близькими та найріднішими людьми.<br/>
                 <b id="name-span"></b>, ми будемо щасливі, якщо ви зможете стати частинкою нашого свята.
             </i>
         </p>
@@ -183,14 +182,14 @@
 <div class="w3-container w3-padding-32 w3-pale-red w3-grayscale-min w3-center" id="wedding">
     <div class="w3-content">
         <div class="w3-row">
-            <div class="w3-half"  style="margin-top: 24px">
+            <div class="w3-half" style="margin-top: 24px">
                 <img class="w3-round-large w3-grayscale-min" src="wedding-ceremony.jpg" style="width:95%;">
                 <h2>Весільна Церемонія</h2>
                 <p>Коли: <b>19 листопада, 13:00-17:00</b></p>
                 <p>Де: <b>вул. Кар'єрна, 44, м. Київ</b></p>
 
             </div>
-            <div class="w3-half"  style="margin-top: 24px">
+            <div class="w3-half" style="margin-top: 24px">
                 <div id="slide-show"></div>
                 <p style="text-align: left;"><i>
                     🤩 Ми хочемо, щоб наше свято було сімейним та атмосферним.<br/>
@@ -226,7 +225,7 @@
             <h2 class="w3-wide w3-center">ВИ ЗМОЖЕТЕ БУТИ?</h2>
             <p class="w3-center" id="form-invitation-sh"></p>
             <form>
-                <label class="w3-text-grey">Ваш телефон</label> 
+                <label class="w3-text-grey">Ваш телефон</label>
                 <input class="w3-input w3-border" type="tel" id="phone-input" placeholder="Телефон..." name="phone">
                 <br/>
             </form>
@@ -289,7 +288,7 @@
         let random = getRandomIntInclusive(1, 14)
 
 
-        if(random === imgNum) {
+        if (random === imgNum) {
             random = getRandomIntInclusive(1, 14)
         }
 
@@ -307,17 +306,10 @@
         const http = new XMLHttpRequest()
         const url = "https://dzubak.com.ua/post_wedding_torchilo.php"
 
-        const additional = [
-            document.getElementById('cannot-be-picknick').checked ? 'Не може бути на пікніку' : '',
-            document.getElementById('cannot-be-wedding').checked ? 'Не може бути на церемонії' : '',
-        ].filter(item => item)
-
         const params = {
             name,
             phone: document.getElementById('phone-input').value,
-            quest: document.getElementById('quest-input').value,
             type: data.positiveAnswer ? 'Буде🎉' : 'Не може бути😟️',
-            additional: data.positiveAnswer && additional.length ? additional.join(', ') : ''
         }
 
         http.open("POST", url, true)
@@ -354,12 +346,12 @@
     });
 
     document.body.addEventListener('click', () => {
-       document.getElementById('form-thanks-invitation-modal').style.display = 'none'
+        document.getElementById('form-thanks-invitation-modal').style.display = 'none'
     });
 
 
     // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
+    window.onclick = function (event) {
         if (event.target == invitationModal) {
             invitationModal.style.display = "none";
         }
