--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     .bgimg2 {
-        background-image: url("5.jpg")
+        background-image: url("guest_name_bg.jpeg")
     }
 
     /* Fading animation */
@@ -104,7 +104,7 @@
 
     .bg-image {
         /* The image used */
-        background-image: url("1.JPG");
+        background-image: url("header_img.jpeg");
 
 
         /* Full height */
@@ -183,7 +183,7 @@
     <div class="w3-content">
         <div class="w3-row">
             <div class="w3-half" style="margin-top: 24px">
-                <img class="w3-round-large w3-grayscale-min" src="wedding-ceremony.jpg" style="width:95%;">
+                <img class="w3-round-large w3-grayscale-min" src="wedding-ceremony.jpeg" style="width:95%;">
                 <h2>Весільна Церемонія</h2>
                 <p>Коли: <b>19 листопада, 13:00-17:00</b></p>
                 <p>Де: <b>вул. Кар'єрна, 44, м. Київ</b></p>
