--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     .gallery-img {
         width: 100%;
         height: 1000px;
+        border-radius: 10px;
         object-fit: cover;
     }
 
@@ -151,7 +152,7 @@
 </div>
 
 <!-- About / Jane And John -->
-<div class="w3-container w3-padding-64 w3-pale-red" id="us">
+<div class="w3-container w3-padding-64 w3-sand" id="us">
     <div class="w3-content">
         <h1 class="w3-center w3-text-grey"><b>Іван & Юстина</b></h1>
         <h2 class="w3-center w3-text-grey"><b>Ми створюємо сім'ю 🥰</b></h2>
@@ -179,7 +180,7 @@
 </div>
 
 <!-- Wedding information -->
-<div class="w3-container w3-padding-32 w3-pale-red w3-grayscale-min w3-center" id="wedding">
+<div class="w3-container w3-padding-32 w3-pale-green w3-grayscale-min w3-center" id="wedding">
     <div class="w3-content">
         <div class="w3-row">
             <div class="w3-half" style="margin-top: 24px">
@@ -203,7 +204,7 @@
 </div>
 
 <!-- ЗАПРОШЕННЯ section -->
-<div class="w3-container w3-padding-64 w3-pale-red w3-center w3-wide" style="padding-bottom: 102px!important;"
+<div class="w3-container w3-padding-64 w3-sand w3-center w3-wide" style="padding-bottom: 102px!important;"
      id="invitation">
     <h1>СПОДІВАЄМОСЬ, ВИ ЗМОЖЕТЕ БУТИ З НАМИ!</h1>
     <p class="w3-large">Будь ласка, дайте відповідь до 5 листопада 2022 року</p>
@@ -300,7 +301,7 @@
     }
 
     setImg()
-    setInterval(setImg, 4000)
+    setInterval(setImg, 6000)
 
     function sendAnswer(data) {
         const http = new XMLHttpRequest()
