--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
-    body, h1, h2 {
-        font-family: "Raleway", sans-serif
-    }
+    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     body, html {
         height: 100%
@@ -29,7 +28,8 @@
 
     .gallery-img {
         width: 100%;
-        height: 1000px;
+        height: 1200px;
+        border-radius: 10px;
         object-fit: cover;
     }
 
@@ -38,9 +38,9 @@
     }
 
 
-    @media only screen and (max-width: 1000px)  {
+    @media only screen and (max-width: 1000px) {
         .gallery-img {
-            height: 600px;
+            height: 800px;
         }
 
         .title {
@@ -48,13 +48,13 @@
         }
     }
 
-    @media only screen and (max-width: 770px)  {
+    @media only screen and (max-width: 770px) {
         .gallery-img {
             height: 500px;
         }
     }
 
-    @media only screen and (max-width: 637px)  {
+    @media only screen and (max-width: 637px) {
         .gallery-img {
             height: 380px;
         }
@@ -64,7 +64,7 @@
         }
     }
 
-    @media only screen and (max-width: 500px)  {
+    @media only screen and (max-width: 500px) {
         .gallery-img {
             height: 380px;
         }
@@ -73,7 +73,7 @@
 
 
     .bgimg2 {
-        background-image: url("5.jpg")
+        background-image: url("guest_name_bg.jpeg")
     }
 
     /* Fading animation */
@@ -104,8 +104,7 @@
 
     .bg-image {
         /* The image used */
-        background-image: url("1.JPG");
-
+        background-image: url("header_img.jpeg");
 
 
         /* Full height */
@@ -119,8 +118,8 @@
 
     /* Position text in the middle of the page/image */
     .bg-text {
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
         color: white;
         font-weight: bold;
         border: 3px solid #f1f1f1;
@@ -139,7 +138,7 @@
 <header class="bg-text w3-display-container w3-wide">
     <h2 class="title">Іван & Юстина</h2>
     <h1 class="w3-large">Ми одружуємося</h1>
-    <p>19 листопада 2022</p>
+    <p>13 листопада 2022</p>
 </header>
 
 <!-- Navbar (sticky bottom) -->
@@ -152,19 +151,19 @@
 </div>
 
 <!-- About / Jane And John -->
-<div class="w3-container w3-padding-64 w3-pale-red" id="us">
-    <div class="w3-content">
-        <h1 class="w3-center w3-text-grey"><b>Іван & Юстина</b></h1>
-        <h2 class="w3-center w3-text-grey"><b>Ми створюємо сім'ю 🥰</b></h2>
+<div class="w3-container w3-padding-64 w3-sand" id="us">
+    <div class="w3-content w3-justify w3-text-grey w3-padding-32">
+        <h1 class="w3-center w3-text-grey">Іван & Юстина</h1>
+        <h2 class="w3-center w3-text-grey">Ми створюємо сім'ю 🥰</h2>
+        <hr class="w3-opacity">
         <div id="gallery-img"></div>
-        <p>
+        <p class="w3-text-black">  
             <i>
                 Незабаром відбудеться це неповторне та незабутнє свято - наше весілля.<br/>
                 Ми віримо, що цей день стане благословенним початком довгого та щасливого життя.<br/>
-                Тому, ми  хочемо розпочати наше подружнє життя поруч із самими близькими та найріднішими людьми.<br/>
-                <b id="name-span"></b>, ми будемо щасливі, якщо ви зможете стати частинкою нашого свята.
-            </i>
-        </p>
+                Тому, ми хочемо розпочати наше подружнє життя поруч із самими близькими та найріднішими людьми.<br/>
+                <b id="name-span"></b>, ми будемо щасливі, якщо ви зможете стати частинкою нашого свята.</i>
+            </p>
         </p><br>
         <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large">Деталі
             весілля</a></p>
@@ -180,31 +179,36 @@
 </div>
 
 <!-- Wedding information -->
-<div class="w3-container w3-padding-32 w3-pale-red w3-grayscale-min w3-center" id="wedding">
+<div class="w3-container w3-padding-32 w3-pale-green w3-grayscale-min w3-center" id="wedding">
     <div class="w3-content">
         <div class="w3-row">
-            <div class="w3-half"  style="margin-top: 24px">
-                <img class="w3-round-large w3-grayscale-min" src="wedding-ceremony.jpg" style="width:95%;">
-                <h2>Весільна Церемонія</h2>
-                <p>Коли: <b>19 листопада, 13:00-17:00</b></p>
-                <p>Де: <b>вул. Кар'єрна, 44, м. Київ</b></p>
-
-            </div>
-            <div class="w3-half"  style="margin-top: 24px">
+            <div class="w3-half" style="margin-top: 24px">
                 <div id="slide-show"></div>
-                <p style="text-align: left;"><i>
-                    🤩 Ми хочемо, щоб наше свято було сімейним та атмосферним.<br/>
-                    Будемо щасливі, якщо ви розділите з нами свято нашої сім’ї.<br/><br/>
-                    Трохи пізніше ми пришлемо детальну програму весільної церемонії.<br/>
-                    Для цього потрібно лише підтвердити свою присутність 😇<br/>
-                </i></p>
+                <img class="w3-round-large w3-grayscale-min" src="wedding-ceremony.jpg" style="width:95%">
+                <h2>Весільна Церемонія</h2>
+                <p>Коли: <b>13 листопада, 12:00 - 13:00</b></p>
+                <p>Де: <b>вул. Миру 3, с. Селець</b></p>
+            </div>
+            <div class="w3-half" style="margin-top: 24px">
+                <img class="w3-round-large w3-grayscale-min"  src="wedding_location.jpg" style="width:95%;">
+                <h2>Святкування</h2>
+                <p>Коли: <b>13 листопада, 14:00 - 17:00</b></p>
+                <p>Де: <b>Кафе "Млин", м. Дубровиця</b></p>
             </div>
         </div>
+        <br><br>
+        <p style="text-align: left;"><i>
+            🤩 Ми хочемо, щоб наше свято було сімейним та атмосферним.
+            Будемо щасливі, якщо ви розділите з нами свято нашої сім’ї.<br/><br/>
+            Трохи пізніше ми пришлемо детальну програму весільної церемонії.
+            Для цього потрібно лише підтвердити свою присутність 😇<br/>
+        </i></p>
     </div>
 </div>
 
+
 <!-- ЗАПРОШЕННЯ section -->
-<div class="w3-container w3-padding-64 w3-pale-red w3-center w3-wide" style="padding-bottom: 102px!important;"
+<div class="w3-container w3-padding-64 w3-sand w3-center w3-wide" style="padding-bottom: 102px!important;"
      id="invitation">
     <h1>СПОДІВАЄМОСЬ, ВИ ЗМОЖЕТЕ БУТИ З НАМИ!</h1>
     <p class="w3-large">Будь ласка, дайте відповідь до 5 листопада 2022 року</p>
@@ -226,7 +230,7 @@
             <h2 class="w3-wide w3-center">ВИ ЗМОЖЕТЕ БУТИ?</h2>
             <p class="w3-center" id="form-invitation-sh"></p>
             <form>
-                <label class="w3-text-grey">Ваш телефон</label> 
+                <label class="w3-text-grey">Ваш телефон</label>
                 <input class="w3-input w3-border" type="tel" id="phone-input" placeholder="Телефон..." name="phone">
                 <br/>
             </form>
@@ -248,7 +252,7 @@
     <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="padding:32px;max-width:600px;margin-top: 20px">
         <div class="w3-container w3-white w3-center">
             <h1 class="w3-wide" id="thanks-header"></h1>
-            <p>Ваша відповідь відправлена</p>
+            <p  id="thanks-subheader">Ваша відповідь відправлена</p>
         </div>
     </div>
 </div>
@@ -263,7 +267,7 @@
 <script>
     const urStr = window.location.href;
     const url = new URL(urStr);
-    const name = url.searchParams.get("name");
+    const name = url.searchParams.get("name") || 'null!';
     const phone = url.searchParams.get("phone") || '';
     const multiply = url.searchParams.get("m") === 'true'
     const personal = url.searchParams.get("t") || 'Запрошуємо на Весільну церемонію!'
@@ -274,7 +278,7 @@
     document.getElementById('name-span').innerText = name;
     document.getElementById('name-title').innerText = name + '!';
     document.getElementById('personal-text').innerText = personal;
-    document.getElementById('thanks-header').innerText = name + '. Дякуємо';
+    document.getElementById('thanks-header').innerText = name + '! Дякуємо!';
     document.getElementById('form-invitation-sh').innerText = (name + '! Ми сподіваємось ви зможете приїхати.');
     document.getElementById('phone-input').value = phone;
 
@@ -286,11 +290,11 @@
     let imgNum
 
     function setImg() {
-        let random = getRandomIntInclusive(1, 14)
+        let random = getRandomIntInclusive(1, 21)
 
 
-        if(random === imgNum) {
-            random = getRandomIntInclusive(1, 14)
+        if (random === imgNum) {
+            random = getRandomIntInclusive(1, 21)
         }
 
         imgNum = random
@@ -301,23 +305,16 @@
     }
 
     setImg()
-    setInterval(setImg, 4000)
+    setInterval(setImg, 6000)
 
     function sendAnswer(data) {
         const http = new XMLHttpRequest()
-        const url = "https://bohdan-khrystyna.space/post_tg.php"
-
-        const additional = [
-            document.getElementById('cannot-be-picknick').checked ? 'Не може бути на пікніку' : '',
-            document.getElementById('cannot-be-wedding').checked ? 'Не може бути на церемонії' : '',
-        ].filter(item => item)
+        const url = "https://dzubak.com.ua/post_wedding_torchilo.php"
 
         const params = {
             name,
             phone: document.getElementById('phone-input').value,
-            quest: document.getElementById('quest-input').value,
-            type: data.positiveAnswer ? 'Буде🎉' : 'Не може бути😟️',
-            additional: data.positiveAnswer && additional.length ? additional.join(', ') : ''
+            type: data.positiveAnswer ? 'Буде🎉🎉🎉' : 'Не може бути😭😭😭',
         }
 
         http.open("POST", url, true)
@@ -327,9 +324,11 @@
         http.onreadystatechange = function () {
             if (http.readyState === 4) {
                 if (http.status === 200) {
+                    const answer = data.positiveAnswer ? 'Буду🎉🎉🎉' : 'Не можу бути😭😫😩🥺';
+
                     invitationModal.style.display = 'none'
+                    document.getElementById('thanks-subheader').innerText = 'Ваша відповідь "'+ answer +'" відправлена'
                     document.getElementById('form-thanks-invitation-modal').style.display = 'block'
-                } else {
 
                 }
             }
@@ -354,12 +353,12 @@
     });
 
     document.body.addEventListener('click', () => {
-       document.getElementById('form-thanks-invitation-modal').style.display = 'none'
+        document.getElementById('form-thanks-invitation-modal').style.display = 'none'
     });
 
 
     // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
+    window.onclick = function (event) {
         if (event.target == invitationModal) {
             invitationModal.style.display = "none";
         }
@@ -368,4 +367,3 @@
 
 </body>
 </html>
-
