--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     const name = url.searchParams.get("name") || 'null!';
     const phone = url.searchParams.get("phone") || '';
     const multiply = url.searchParams.get("m") === 'true'
-    const personal = url.searchParams.get("t") || 'Запрошуємо на Весільну церемонію!'
+    const personal = url.searchParams.get("t") || 'Запрошуємо на весільну церемонію!'
 
     const invitationModal = document.getElementById('form-invitation-modal')
 
