--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
-    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+   body, h1, h2 {
+        font-family: "Raleway", sans-serif
+    }
 
     body, html {
         height: 100%
