--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <img class="w3-round-large w3-grayscale-min" src="wedding-ceremony.jpg" style="width:95%">
                 <h2>Весільна Церемонія</h2>
                 <p>Коли: <b>13 листопада, 12:00 - 13:00</b></p>
-                <p>Де: <b>вул. Миру 3, с. Селець</b></p>
+                <p>Де: <b>вул. 17 Вересня  59, с. Селець</b></p>
             </div>
             <div class="w3-half" style="margin-top: 24px">
                 <img class="w3-round-large w3-grayscale-min"  src="wedding_location.jpg" style="width:95%;">
